--- a/404.html
+++ b/404.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <head>
 <title>Error 404 | Jun Jay Ng</title>
-<link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="style.css">
+<link rel="shortcut icon" href="https://junjayng1508.github.io/favicon.ico" type="image/x-icon">
+<style>
+  .img_404 {
+  border-style: solid;
+  border: 1;
+}
+  .page_404 {
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    line-height: 25px;
+}
+</style>
 </head>
 <body>
 <div class="page_404">
-  <img src="assets/img_404.png" source="img_404">
+  <img class="img_404" src="assets/404.png" source="img_404">
   <h1 class="title_404"><b>Error 404.</b></h1>
   <p class="apology_404">We were unable to locate the file you've requested.<br>Try that again in awhile or <b><a href="mailto:junjayng1508@gmail.com">contact the owner of this page</a></b>.</p>
 </div>
