--- a/404.html
+++ b/404.html
@@ -3,6 +3,9 @@
 <title>Error 404 | Jun Jay Ng</title>
 <link rel="shortcut icon" href="https://junjayng1508.github.io/favicon.ico" type="image/x-icon">
 <style>
+  body {
+  background-color: rgb(146, 224, 146);
+}
   .img_404 {
   border-style: solid;
   border: 1;
