--- a/e/hello-world.html
+++ b/e/hello-world.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><head><title>Hello World!</title><link rel="shortcut icon" href="https://junjayng1508.github.com/favicon.ico" type="image/x-icon"> <meta http-equiv="refresh" content="1; url=https://youtu.be/iik25wqIuFo"></head><body></body></html>
+<!DOCTYPE html>
+<head>
+<title>Hello World!</title>
+<link rel="shortcut icon" href="https://junjayng1508.github.com/favicon.ico" type="image/x-icon"> 
+<meta http-equiv="refresh" content="0; url=https://youtu.be/iik25wqIuFo">
+</head>
+<body>
+</body>
+</html>
