--- a/bvss/1dtd2021-padlet.html
+++ b/bvss/1dtd2021-padlet.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>Slides | GI Group 3 | 2021 1D</title>
+<title>Teachers' Day Padlet | 2021 1D</title>
 <link rel="shortcut icon" href="https://junjayng1508.github.io/favicon.ico" type="image/x-icon">  
 <meta http-equiv="refresh" content="1; url=https://padlet.com/pakiaraj_patric_samantha/1D_teachersDay_2021">
 <style>
